# vitos-pizza-cafe-langgraph

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  customer_db.sql  pyproject.toml  requirements.txt
Vitos-Pizza-Cafe-KB/: account_management.md  company.md  delivery_and_pickup.md  dietary_information.md  menu_and_ordering.md  payment_information.md
Vitos-Pizza-Cafe-KB/faiss_index/: index.faiss  index.pkl
docs/: demo-1-prompt.txt
src/: __init__.py  __main__.py  app.py  client.py  config.py  knowledge_base.py  panw_airs.py  vitos_pizza_cafe.py
src/backend/: __init__.py  __main__.py  api.py  chat_service.py  database.py
src/frontend/: __init__.py  __main__.py  api_client.py  app.py
temp/: panw_airs.py  test_vitos_pizza_cafe.py
tests/: test_api_integration.py  test_vitos_pizza_cafe.py
tests/backend/integration/: test_api.py
tests/backend/unit/: test_chat_service.py
tests/unit/: test_api.py  test_chat_service.py
